2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/xlib-dock.wiz,
	plugins/project-wizard/templates/wxwin.wiz,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/django.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/cpp.wiz,
	plugins/project-wizard/templates/sdl.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/minimal.wiz,
	plugins/project-wizard/templates/xlib.wiz,
	plugins/project-wizard/templates/gcj.wiz:
	Fix #533346: Create project in path with spaces fails

2008-05-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.glade,
	libanjuta/anjuta-preferences.c:
	Fix #531940: Can't change the default project directory

2008-05-13  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/executer.c:
	Fix #532243 Execute Program with whitespace in the project path fails

2008-05-13  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/debug_tree.c:
	Fix #531623: Crash on updating non-existing watch

2008-04-21  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c
	(on_editor_command_paste_activate):
	#528693 – Ctrl-F (Find) followed by Ctrl-V (Paste) pastes into main window
  (from trunk)

2008-04-20  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/plugin.c
	(update_document_ui_undo_items), (update_document_ui_save_items),
	(on_document_update_ui):
	* plugins/sourceview/sourceview.c (idocument_redo):
	Bug #528705 – There is no Redo (from trunk)

2008-04-19  Johannes Schmid  <jhs@gnome.org>

	* plugins/search/search-replace_backend.c (isawordchar),
	(extra_match), (get_next_match):
	
	Make searching utf-8 aware (#440637)

=== anjuta 2.4.1 ===
